setted up structure of Analyze_Data functionality

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -21,7 +21,52 @@
     "while(b):\n",
     "    print(\"1. Analyze Data\")\n",
     "    print(\"2. Edit Data\")\n",
-    "    print(\"3. Exit\")"
+    "    print(\"3. Sort Folder\")\n",
+    "    print(\"4. Exit\")\n",
+    "    choice=input(\"Enter Choice: \")\n",
+    "    if(choice==\"1\"):\n",
+    "        print(1)\n",
+    "        pass\n",
+    "    elif(choice==\"2\"):\n",
+    "        print(2)\n",
+    "        pass\n",
+    "    elif(choice==\"3\"):\n",
+    "        print(3)\n",
+    "        pass\n",
+    "    elif(choice==\"4\"):\n",
+    "        print(\"Exiting Program...\")\n",
+    "        b=False\n",
+    "    else:\n",
+    "        print(\"Please Enter Valid Choice !\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Analyze_Data():\n",
+    "    b=True\n",
+    "    while(b):\n",
+    "        print(\"1. Analyze CSV File\")\n",
+    "        print(\"2. Analyze Parquet File\")\n",
+    "        print(\"3. Analyze Excel File\")\n",
+    "        choice=input(\"Enter Choice: \")\n",
+    "        if(choice==\"1\"):\n",
+    "            print(1)\n",
+    "            pass\n",
+    "        elif(choice==\"2\"):\n",
+    "            print(2)\n",
+    "            pass\n",
+    "        elif(choice==\"3\"):\n",
+    "          print(3)\n",
+    "          pass\n",
+    "        elif(choice==\"4\"):\n",
+    "          print(\"Exiting Program...\")\n",
+    "          b=False\n",
+    "        else:\n",
+    "          print(\"Please Enter Valid Choice !\")\n"
    ]
   }
  ],
