Added Edit_Data and Analyze_data method structure only

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -46,12 +46,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Analyze_Data():\n",
+    "def Load_Data():\n",
     "    b=True\n",
     "    while(b):\n",
     "        print(\"1. Analyze CSV File\")\n",
     "        print(\"2. Analyze Parquet File\")\n",
     "        print(\"3. Analyze Excel File\")\n",
+    "        print(\"4. Return\")\n",
     "        choice=input(\"Enter Choice: \")\n",
     "        if(choice==\"1\"):\n",
     "            print(1)\n",
@@ -63,10 +64,96 @@
     "          print(3)\n",
     "          pass\n",
     "        elif(choice==\"4\"):\n",
-    "          print(\"Exiting Program...\")\n",
+    "          # print(\"Exiting Program...\")\n",
     "          b=False\n",
     "        else:\n",
     "          print(\"Please Enter Valid Choice !\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Analyze_Data():\n",
+    "    b=True\n",
+    "    while(b):\n",
+    "        print(\"1. General Analysis\")\n",
+    "        print(\"2. Custom Analysis\")\n",
+    "        print(\"3. Return\")\n",
+    "        choice=input(\"Enter Choice: \")\n",
+    "        if(choice==\"1\"):\n",
+    "            print(1)\n",
+    "            pass\n",
+    "        elif(choice==\"2\"):\n",
+    "            print(2)\n",
+    "            pass\n",
+    "        elif(choice==\"3\"):\n",
+    "          # print(\"Exiting Program...\")\n",
+    "          b=False\n",
+    "        else:\n",
+    "          print(\"Please Enter Valid Choice !\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Edit_Data():\n",
+    "    b = True\n",
+    "while b:\n",
+    "    print(\"1. Add a New Row\")\n",
+    "    print(\"2. Update an Existing Row\")\n",
+    "    print(\"3. Delete a Row\")\n",
+    "    print(\"4. Edit Specific Column Data\")\n",
+    "    print(\"5. Fill Missing Data\")\n",
+    "    print(\"6. Rename Columns\")\n",
+    "    print(\"7. Change Data Type of a Column\")\n",
+    "    print(\"8. Sort Data\")\n",
+    "    print(\"9. Filter Data\")\n",
+    "    print(\"10. Remove Duplicates\")\n",
+    "    print(\"11. Return\")\n",
+    "    \n",
+    "    choice = input(\"Enter Choice: \")\n",
+    "    \n",
+    "    if choice == \"1\":\n",
+    "        print(\"Adding a new row...\")\n",
+    "        pass\n",
+    "    elif choice == \"2\":\n",
+    "        print(\"Updating an existing row...\")\n",
+    "        pass\n",
+    "    elif choice == \"3\":\n",
+    "        print(\"Deleting a row...\")\n",
+    "        pass\n",
+    "    elif choice == \"4\":\n",
+    "        print(\"Editing specific column data...\")\n",
+    "        pass\n",
+    "    elif choice == \"5\":\n",
+    "        print(\"Filling missing data...\")\n",
+    "        pass\n",
+    "    elif choice == \"6\":\n",
+    "        print(\"Renaming columns...\")\n",
+    "        pass\n",
+    "    elif choice == \"7\":\n",
+    "        print(\"Changing data type of a column...\")\n",
+    "        pass\n",
+    "    elif choice == \"8\":\n",
+    "        print(\"Sorting data...\")\n",
+    "        pass\n",
+    "    elif choice == \"9\":\n",
+    "        print(\"Filtering data...\")\n",
+    "        pass\n",
+    "    elif choice == \"10\":\n",
+    "        print(\"Removing duplicates...\")\n",
+    "        pass\n",
+    "    elif choice == \"11\":\n",
+    "        print(\"Returning to main menu...\")\n",
+    "        b = False\n",
+    "    else:\n",
+    "        print(\"Please Enter a Valid Choice!\")\n"
    ]
   }
  ],
