added some description of dataset and general analysis of dataset in General_Analysis functionality

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -17,27 +17,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=True\n",
-    "while(b):\n",
-    "    print(\"1. Analyze Data\")\n",
-    "    print(\"2. Edit Data\")\n",
-    "    print(\"3. Sort Folder\")\n",
-    "    print(\"4. Exit\")\n",
-    "    choice=input(\"Enter Choice: \")\n",
-    "    if(choice==\"1\"):\n",
-    "        print(1)\n",
-    "        pass\n",
-    "    elif(choice==\"2\"):\n",
-    "        print(2)\n",
-    "        pass\n",
-    "    elif(choice==\"3\"):\n",
-    "        print(3)\n",
-    "        pass\n",
-    "    elif(choice==\"4\"):\n",
-    "        print(\"Exiting Program...\")\n",
-    "        b=False\n",
-    "    else:\n",
-    "        print(\"Please Enter Valid Choice !\")\n"
+    "def General_Analysis(df):\n",
+    "    print(\"GENERAL ANALYSIS OF THE DATAFRAME\")\n",
+    "    print(\"*\" * 50)\n",
+    "    print(f\"Shape of DataFrame: {df.shape}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"Column Information:\")\n",
+    "    print(df.info())\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"Missing Values in Each Column:\")\n",
+    "    print(df.isnull().sum())\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"Descriptive Statistics (Numerical):\")\n",
+    "    print(df.describe())\n",
+    "    print(\"-\" * 50)\n",
+    "    print(f\"Number of Duplicate Rows: {df.duplicated().sum()}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"Correlation Matrix (Numerical Columns):\")\n",
+    "    corr_matrix=df.corr()\n",
+    "    print(corr_matrix)\n",
+    "    plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
+    "    plt.colorbar()\n",
+    "    plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45)\n",
+    "    plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45)\n",
+    "    plt.title('Correlation Matrix Heatmap')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    print(\"-\" * 50) \n"
    ]
   },
   {
@@ -46,46 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Load_Data():\n",
-    "    b=True\n",
-    "    while(b):\n",
-    "        print(\"1. Analyze CSV File\")\n",
-    "        print(\"2. Analyze Parquet File\")\n",
-    "        print(\"3. Analyze Excel File\")\n",
-    "        print(\"4. Return\")\n",
-    "        choice=input(\"Enter Choice: \")\n",
-    "        if(choice==\"1\"):\n",
-    "            print(1)\n",
-    "            pass\n",
-    "        elif(choice==\"2\"):\n",
-    "            print(2)\n",
-    "            pass\n",
-    "        elif(choice==\"3\"):\n",
-    "          print(3)\n",
-    "          pass\n",
-    "        elif(choice==\"4\"):\n",
-    "          # print(\"Exiting Program...\")\n",
-    "          b=False\n",
-    "        else:\n",
-    "          print(\"Please Enter Valid Choice !\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Analyze_Data():\n",
+    "def Analyze_Data(df):\n",
     "    b=True\n",
     "    while(b):\n",
     "        print(\"1. General Analysis\")\n",
     "        print(\"2. Custom Analysis\")\n",
     "        print(\"3. Return\")\n",
-    "        choice=input(\"Enter Choice: \")\n",
+    "        choice=input(\"Enter Choice: \").strip()\n",
     "        if(choice==\"1\"):\n",
-    "            print(1)\n",
-    "            pass\n",
+    "           General_Analysis(df)\n",
     "        elif(choice==\"2\"):\n",
     "            print(2)\n",
     "            pass\n",
@@ -102,58 +77,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def Load_Data():\n",
+    "    b=True\n",
+    "    while(b):\n",
+    "        print(\"1. Analyze CSV File\")\n",
+    "        print(\"2. Analyze Parquet File\")\n",
+    "        print(\"3. Analyze Excel File\")\n",
+    "        print(\"4. Return\")\n",
+    "        choice=input(\"Enter Choice: \").strip()\n",
+    "        if(choice==\"1\"):\n",
+    "          path = input(\"Enter File Path of CSV File: \")\n",
+    "          try:\n",
+    "              df = pd.read_csv(path)\n",
+    "              Analyze_Data(df)\n",
+    "          except (FileNotFoundError, Exception) as e:\n",
+    "              print(f\"Error: {e}\")\n",
+    "              print(\"CSV File not found. Try again !\")\n",
+    "               \n",
+    "        elif(choice==\"2\"):\n",
+    "              path = input(\"Enter File Path of Parquet File: \")\n",
+    "              try:\n",
+    "                  df = pd.read_csv(path)\n",
+    "                  Analyze_Data(df)\n",
+    "              except (FileNotFoundError, Exception) as e:\n",
+    "                  print(f\"Error: {e}\")\n",
+    "                  print(\"Parquet File not found. Try again !\")\n",
+    "        elif(choice==\"3\"):\n",
+    "              path = input(\"Enter File Path of Excel File: \")\n",
+    "              try:\n",
+    "                  df = pd.read_csv(path)\n",
+    "                  Analyze_Data(df)\n",
+    "              except (FileNotFoundError, Exception) as e:\n",
+    "                  print(f\"Error: {e}\")\n",
+    "                  print(\"Excel File not found. Try again !\")\n",
+    "        elif(choice==\"4\"):\n",
+    "          # print(\"Exiting Program...\")\n",
+    "          b=False\n",
+    "        else:\n",
+    "          print(\"Please Enter Valid Choice !\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def Edit_Data():\n",
     "    b = True\n",
-    "while b:\n",
-    "    print(\"1. Add a New Row\")\n",
-    "    print(\"2. Update an Existing Row\")\n",
-    "    print(\"3. Delete a Row\")\n",
-    "    print(\"4. Edit Specific Column Data\")\n",
-    "    print(\"5. Fill Missing Data\")\n",
-    "    print(\"6. Rename Columns\")\n",
-    "    print(\"7. Change Data Type of a Column\")\n",
-    "    print(\"8. Sort Data\")\n",
-    "    print(\"9. Filter Data\")\n",
-    "    print(\"10. Remove Duplicates\")\n",
-    "    print(\"11. Return\")\n",
-    "    \n",
-    "    choice = input(\"Enter Choice: \")\n",
-    "    \n",
-    "    if choice == \"1\":\n",
-    "        print(\"Adding a new row...\")\n",
+    "    while b:\n",
+    "        print(\"1. Add a New Row\")\n",
+    "        print(\"2. Update an Existing Row\")\n",
+    "        print(\"3. Delete a Row\")\n",
+    "        print(\"4. Edit Specific Column Data\")\n",
+    "        print(\"5. Fill Missing Data\")\n",
+    "        print(\"6. Rename Columns\")\n",
+    "        print(\"7. Change Data Type of a Column\")\n",
+    "        print(\"8. Sort Data\")\n",
+    "        print(\"9. Filter Data\")\n",
+    "        print(\"10. Remove Duplicates\")\n",
+    "        print(\"11. Return\")\n",
+    "        \n",
+    "        choice = input(\"Enter Choice: \")\n",
+    "        \n",
+    "        if choice == \"1\":\n",
+    "            print(\"Adding a new row...\")\n",
+    "            pass\n",
+    "        elif choice == \"2\":\n",
+    "            print(\"Updating an existing row...\")\n",
+    "            pass\n",
+    "        elif choice == \"3\":\n",
+    "            print(\"Deleting a row...\")\n",
+    "            pass\n",
+    "        elif choice == \"4\":\n",
+    "            print(\"Editing specific column data...\")\n",
+    "            pass\n",
+    "        elif choice == \"5\":\n",
+    "            print(\"Filling missing data...\")\n",
+    "            pass\n",
+    "        elif choice == \"6\":\n",
+    "            print(\"Renaming columns...\")\n",
+    "            pass\n",
+    "        elif choice == \"7\":\n",
+    "            print(\"Changing data type of a column...\")\n",
+    "            pass\n",
+    "        elif choice == \"8\":\n",
+    "            print(\"Sorting data...\")\n",
+    "            pass\n",
+    "        elif choice == \"9\":\n",
+    "            print(\"Filtering data...\")\n",
+    "            pass\n",
+    "        elif choice == \"10\":\n",
+    "            print(\"Removing duplicates...\")\n",
+    "            pass\n",
+    "        elif choice == \"11\":\n",
+    "            print(\"Returning to main menu...\")\n",
+    "            b = False\n",
+    "        else:\n",
+    "            print(\"Please Enter a Valid Choice!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=True\n",
+    "while(b):\n",
+    "    print(\"1. Analyze Data\")\n",
+    "    print(\"2. Edit Data\")\n",
+    "    print(\"3. Cleaning Data\")\n",
+    "    print(\"4. Sort Folder\")\n",
+    "    print(\"5. Exit\")\n",
+    "    choice=input(\"Enter Choice: \")\n",
+    "    if(choice==\"1\"):\n",
+    "        print(1)\n",
     "        pass\n",
-    "    elif choice == \"2\":\n",
-    "        print(\"Updating an existing row...\")\n",
+    "    elif(choice==\"2\"):\n",
+    "        print(2)\n",
     "        pass\n",
-    "    elif choice == \"3\":\n",
-    "        print(\"Deleting a row...\")\n",
+    "    elif(choice==\"3\"):\n",
+    "        print(3)\n",
     "        pass\n",
-    "    elif choice == \"4\":\n",
-    "        print(\"Editing specific column data...\")\n",
-    "        pass\n",
-    "    elif choice == \"5\":\n",
-    "        print(\"Filling missing data...\")\n",
-    "        pass\n",
-    "    elif choice == \"6\":\n",
-    "        print(\"Renaming columns...\")\n",
-    "        pass\n",
-    "    elif choice == \"7\":\n",
-    "        print(\"Changing data type of a column...\")\n",
-    "        pass\n",
-    "    elif choice == \"8\":\n",
-    "        print(\"Sorting data...\")\n",
-    "        pass\n",
-    "    elif choice == \"9\":\n",
-    "        print(\"Filtering data...\")\n",
-    "        pass\n",
-    "    elif choice == \"10\":\n",
-    "        print(\"Removing duplicates...\")\n",
-    "        pass\n",
-    "    elif choice == \"11\":\n",
-    "        print(\"Returning to main menu...\")\n",
-    "        b = False\n",
+    "    elif(choice==\"4\"):\n",
+    "        print(4)\n",
+    "    elif(choice==\"5\"):\n",
+    "          print(\"Exiting Program...\")\n",
+    "          b=False\n",
     "    else:\n",
-    "        print(\"Please Enter a Valid Choice!\")\n"
+    "        print(\"Please Enter Valid Choice !\")\n"
    ]
   }
  ],
