filtered columns based on numeric value for corealtion matrix and to visualise heatmap of corelation matrix also added some exception handling in previous pr

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,40 @@
     "    print(f\"Shape of DataFrame: {df.shape}\")\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Column Information:\")\n",
+    "    print(\"-\" * 50)\n",
     "    print(df.info())\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Missing Values in Each Column:\")\n",
+    "    print(\"-\" * 50)\n",
     "    print(df.isnull().sum())\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Descriptive Statistics (Numerical):\")\n",
+    "    print(\"-\" * 50)\n",
     "    print(df.describe())\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"First 5 Rows of the DataFrame:\")\n",
+    "    print(\"-\" * 50)\n",
+    "    print(df.head())\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"Last 5 Rows of the DataFrame:\")\n",
+    "    print(\"-\" * 50)\n",
+    "    print(df.tail())\n",
     "    print(\"-\" * 50)\n",
     "    print(f\"Number of Duplicate Rows: {df.duplicated().sum()}\")\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Correlation Matrix (Numerical Columns):\")\n",
-    "    corr_matrix=df.corr()\n",
+    "    print(\"-\" * 50)\n",
+    "    # numdf = df.apply(pd.to_numeric, errors='coerce')\n",
+    "    numdf = df.select_dtypes(include=['number'])\n",
+    "    corr_matrix=numdf.corr()\n",
     "    print(corr_matrix)\n",
+    "    print(\"-\" * 50)\n",
+    "    plt.figure(figsize=(8, 6))\n",
     "    plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
     "    plt.colorbar()\n",
-    "    plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45)\n",
-    "    plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45)\n",
-    "    plt.title('Correlation Matrix Heatmap')\n",
+    "    plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "    plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "    plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    print(\"-\" * 50) \n"
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +104,7 @@
     "        if(choice==\"1\"):\n",
     "          path = input(\"Enter File Path of CSV File: \")\n",
     "          try:\n",
-    "              df = pd.read_csv(path)\n",
+    "              df = pd.read_csv(path, encoding='unicode_escape')\n",
     "              Analyze_Data(df)\n",
     "          except (FileNotFoundError, Exception) as e:\n",
     "              print(f\"Error: {e}\")\n",
@@ -192,8 +208,7 @@
     "    print(\"5. Exit\")\n",
     "    choice=input(\"Enter Choice: \")\n",
     "    if(choice==\"1\"):\n",
-    "        print(1)\n",
-    "        pass\n",
+    "        Load_Data()\n",
     "    elif(choice==\"2\"):\n",
     "        print(2)\n",
     "        pass\n",
