added save general report feature without corelation matrix graph

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,54 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from io import StringIO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Save_Genreal_Report(corr_matrix, dup, head, tail, des, null, info, shape):\n",
+    "     report = input(\"Enter the file name to save the report (e.g., report.txt): \")\n",
+    "     try:\n",
+    "        with open(report, 'w') as f:\n",
+    "            f.write(\"GENERAL ANALYSIS OF THE DATAFRAME\\n\")\n",
+    "            f.write(\"*\" * 50 + \"\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(f\"Shape of DataFrame: {shape}\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"Column Information:\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(info + \"\\n\") \n",
+    "            f.write(\"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"Missing Values in Each Column:\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(str(null) + \"\\n\")\n",
+    "            f.write(\"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"Descriptive Statistics (Numerical):\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(str(des) + \"\\n\")\n",
+    "            f.write(\"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"First 5 Rows of the DataFrame:\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(str(head) + \"\\n\")\n",
+    "            f.write(\"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"Last 5 Rows of the DataFrame:\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(str(tail) + \"\\n\")\n",
+    "            f.write(\"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(f\"Number of Duplicate Rows: {dup}\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\\n\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(\"Correlation Matrix (Numerical Columns):\\n\")\n",
+    "            f.write(\"-\" * 50 + \"\\n\")\n",
+    "            f.write(str(corr_matrix) + \"\\n\")\n",
+    "            f.write(\"\\n\\n\")\n",
+    "        \n",
+    "        print(f\"Report successfully saved as '{report}'.\")\n",
+    "     except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def General_Analysis(df):\n",
     "    print(\"GENERAL ANALYSIS OF THE DATAFRAME\")\n",
     "    print(\"*\" * 50)\n",
-    "    print(f\"Shape of DataFrame: {df.shape}\")\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "    shape=df.shape\n",
+    "    print(\"-\" * 50)\n",
+    "    print(f\"Shape of DataFrame: {shape}\" )\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"\\n\" + \"\\n\")\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Column Information:\")\n",
     "    print(\"-\" * 50)\n",
-    "    print(df.info())\n",
+    "    buffer = StringIO()\n",
+    "    df.info(buf=buffer)  # Write the info to the buffer\n",
+    "    info = buffer.getvalue()\n",
+    "    print(info)\n",
+    "    print(\"\\n\" + \"\\n\")\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Missing Values in Each Column:\")\n",
     "    print(\"-\" * 50)\n",
-    "    print(df.isnull().sum())\n",
+    "    null=df.isnull().sum()\n",
+    "    print(null)\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "\n",
+    "    numdf = df.select_dtypes(include=['number'])\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Descriptive Statistics (Numerical):\")\n",
     "    print(\"-\" * 50)\n",
-    "    print(df.describe())\n",
+    "    des=numdf.describe()\n",
+    "    print(des )\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "\n",
+    "    \n",
     "    print(\"-\" * 50)\n",
     "    print(\"First 5 Rows of the DataFrame:\")\n",
     "    print(\"-\" * 50)\n",
-    "    print(df.head())\n",
+    "    head=df.head()\n",
+    "    print(head )\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Last 5 Rows of the DataFrame:\")\n",
     "    print(\"-\" * 50)\n",
-    "    print(df.tail())\n",
+    "    tail=df.tail()\n",
+    "    print(tail )\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "\n",
     "    print(\"-\" * 50)\n",
-    "    print(f\"Number of Duplicate Rows: {df.duplicated().sum()}\")\n",
+    "    dup=df.duplicated().sum()\n",
+    "    print(f\"Number of Duplicate Rows: {dup}\" )\n",
+    "    print(\"-\" * 50)\n",
+    "    print(\"\\n\" + \"\\n\")\n",
+    "\n",
     "    print(\"-\" * 50)\n",
     "    print(\"Correlation Matrix (Numerical Columns):\")\n",
     "    print(\"-\" * 50)\n",
     "    # numdf = df.apply(pd.to_numeric, errors='coerce')\n",
-    "    numdf = df.select_dtypes(include=['number'])\n",
     "    corr_matrix=numdf.corr()\n",
-    "    print(corr_matrix)\n",
+    "    print(corr_matrix )\n",
+    "    print(\"\\n\" )\n",
+    "\n",
     "    print(\"-\" * 50)\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
@@ -59,12 +144,18 @@
     "    plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "    print(\"-\" * 50) \n"
+    "    print(\"-\" * 50 ) \n",
+    "    # print(\"\", end=\"\")\n",
+    "    save=input('Save General Report? (Y/N):')\n",
+    "    if save.lower()==\"y\":\n",
+    "        Save_Genreal_Report(corr_matrix, dup, head, tail, des, null, info, shape)\n",
+    " \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +312,8 @@
     "          print(\"Exiting Program...\")\n",
     "          b=False\n",
     "    else:\n",
-    "        print(\"Please Enter Valid Choice !\")\n"
+    "        print(\"Please Enter Valid Choice !\")\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n"
    ]
   }
  ],
