added functionality to save heatmap png image of correlation matrix using os and file io

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -9,18 +9,32 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from io import StringIO"
+    "from io import StringIO\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Save_Genreal_Report(corr_matrix, dup, head, tail, des, null, info, shape):\n",
-    "     report = input(\"Enter the file name to save the report (e.g., report.txt): \")\n",
+    "    #  report = input(\"Enter the file name to save the report (e.g., report.txt): \")\n",
     "     try:\n",
+    "        folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
+    "        os.makedirs(folder_path, exist_ok=True)\n",
+    "        report = os.path.join(folder_path, \"report.txt\")\n",
+    "        heatmap_file = os.path.join(folder_path, \"correlation_heatmap.png\")\n",
+    "        plt.figure(figsize=(8, 6))\n",
+    "        plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
+    "        plt.colorbar()\n",
+    "        plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "        plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "        plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(heatmap_file)  \n",
+    "        plt.close()\n",
     "        with open(report, 'w') as f:\n",
     "            f.write(\"GENERAL ANALYSIS OF THE DATAFRAME\\n\")\n",
     "            f.write(\"*\" * 50 + \"\\n\\n\")\n",
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
