added file Io to save report.txt with graph

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "            f.write(\"Descriptive Statistics (Numerical):\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(str(des) + \"\\n\")\n",
+    "            # f.write(tabulate(des, headers='keys', tablefmt='psql'))\n",
     "            f.write(\"\\n\\n\\n\")\n",
     "            f.write(\"-\" * 50 + \"\\n\")\n",
     "            f.write(\"First 5 Rows of the DataFrame:\\n\")\n",
@@ -82,12 +83,115 @@
     "     except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
     "\n",
+    "\n",
+    "\n",
+    "    # try:\n",
+    "    #         # Create the folder path\n",
+    "    #         folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
+    "    #         os.makedirs(folder_path, exist_ok=True)\n",
+    "            \n",
+    "    #         # Report and heatmap file paths\n",
+    "    #         report = os.path.join(folder_path, \"report.txt\")\n",
+    "    #         heatmap_file = os.path.join(folder_path, \"correlation_heatmap.png\")\n",
+    "            \n",
+    "    #         # Create the heatmap\n",
+    "    #         plt.figure(figsize=(8, 6))\n",
+    "    #         plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
+    "    #         plt.colorbar()\n",
+    "    #         plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "    #         plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "    #         plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
+    "    #         plt.tight_layout()\n",
+    "    #         plt.savefig(heatmap_file)  \n",
+    "    #         plt.close()\n",
+    "            \n",
+    "    #         # Write the report in table format\n",
+    "    #         with open(report, 'w') as f:\n",
+    "    #             f.write(\"GENERAL ANALYSIS OF THE DATAFRAME\\n\")\n",
+    "    #             f.write(\"=\" * 80 + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # Shape of the DataFrame\n",
+    "    #             f.write(\"📌 Shape of DataFrame:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(f\"Rows: {shape[0]}, Columns: {shape[1]}\\n\\n\")\n",
+    "                \n",
+    "    #             # Column Information\n",
+    "    #             f.write(\"📌 Column Information:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             wrapped_info = tabulate([[info]], tablefmt=\"fancy_grid\", stralign=\"center\")\n",
+    "    #             f.write(wrapped_info + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # Missing Values\n",
+    "    #             f.write(\"📌 Missing Values in Each Column:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(tabulate(null.to_frame(), headers=[\"Column\", \"Missing Values\"], tablefmt=\"fancy_grid\") + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # Descriptive Statistics\n",
+    "    #             f.write(\"📌 Descriptive Statistics (Numerical):\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(tabulate(des, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # First 5 Rows\n",
+    "    #             f.write(\"📌 First 5 Rows of the DataFrame:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(tabulate(head, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # Last 5 Rows\n",
+    "    #             f.write(\"📌 Last 5 Rows of the DataFrame:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(tabulate(tail, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
+    "                \n",
+    "    #             # Duplicate Rows\n",
+    "    #             f.write(\"📌 Number of Duplicate Rows:\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(f\"{dup} duplicate rows found.\\n\\n\")\n",
+    "                \n",
+    "    #             # Correlation Matrix\n",
+    "    #             f.write(\"📌 Correlation Matrix (Numerical Columns):\\n\")\n",
+    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
+    "    #             f.write(tabulate(corr_matrix, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
+    "                \n",
+    "    #             f.write(\"=\" * 80 + \"\\n\")\n",
+    "    #             f.write(\"📄 Report Generated Successfully!\\n\")\n",
+    "            \n",
+    "    #         print(f\"✅ Report saved successfully as '{report}'\")\n",
+    "\n",
+    "    # except Exception as e:\n",
+    "    #         print(f\"Error: {e}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# def Save_General_Report(corr_matrix, dup, head, tail, des, null, info, shape):\n",
+    "#     folder_path = input('Enter Folder Path: ')\n",
+    "#     os.makedirs(folder_path, exist_ok=True)\n",
+    "#     filename = os.path.join(folder_path, \"General_Report.csv\")\n",
+    "\n",
+    "#     # Combine the information into a single dictionary for the CSV file\n",
+    "#     report_data = {\n",
+    "#         \"Shape of DataFrame\": [f\"Rows: {shape[0]}, Columns: {shape[1]}\"],\n",
+    "#         \"Column Information\": [info],\n",
+    "#         \"Missing Values in Each Column\": [null.to_string()],\n",
+    "#         \"Descriptive Statistics (Numerical)\": [des.to_string()],\n",
+    "#         \"First 5 Rows of DataFrame\": [head.to_string()],\n",
+    "#         \"Last 5 Rows of DataFrame\": [tail.to_string()],\n",
+    "#         \"Number of Duplicate Rows\": [dup],\n",
+    "#         \"Correlation Matrix\": [corr_matrix.to_string()]\n",
+    "#     }\n",
+    "\n",
+    "#     # Convert report data to DataFrame\n",
+    "#     report_df = pd.DataFrame(report_data)\n",
+    "\n",
+    "#     # Save to CSV\n",
+    "#     report_df.to_csv(filename, index=False)\n",
+    "\n",
+    "#     print(f\"✅ Report saved successfully as {filename}\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -428,10 +532,6 @@
       "2. Analyze Parquet File\n",
       "3. Analyze Excel File\n",
       "4. Return\n",
-      "1. General Analysis\n",
-      "2. Custom Analysis\n",
-      "3. Return\n",
-      "Please Enter Valid Choice !\n",
       "1. General Analysis\n",
       "2. Custom Analysis\n",
       "3. Return\n",
@@ -601,10 +701,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Report successfully saved as 'D:\\\\shivam\\\\accident_tabulate_report\\report.txt'.\n",
+      "Report successfully saved as 'D:\\\\shivam\\\\acc_report_8\\report.txt'.\n",
       "1. General Analysis\n",
       "2. Custom Analysis\n",
-      "3. Return\n"
+      "3. Return\n",
+      "1. Analyze CSV File\n",
+      "2. Analyze Parquet File\n",
+      "3. Analyze Excel File\n",
+      "4. Return\n",
+      "1. Analyze Data\n",
+      "2. Edit Data\n",
+      "3. Cleaning Data\n",
+      "4. Sort Folder\n",
+      "5. Exit\n",
+      "Exiting Program...\n"
      ]
     }
    ],
@@ -633,7 +743,8 @@
     "    else:\n",
     "        print(\"Please Enter Valid Choice !\")\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
-    "# 1\n"
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset.csv\n",
+    "# D:\\\\shivam\n"
    ]
   }
  ],
